# rheum_project

./: .gitignore  .gitmodules  README.md  conda_requirements.txt  identifying_trials.py  paper_url_for_labeling.py  pyproject.toml  read_2col_pdf.py  regex.py  requirements.txt  sentence_extract.py  sentence_extract_take2.py  trial_id_match.py  unextracted_paper_info.csv  updated_paper_info.csv
Document_Extraction/: paper_extraction.py  paper_info_pull.py  rp_pull_test.ipynb
LLM_Agent/: batch_inference_temp.py  llm_template.py
asset_notes/: Question.pptx
database_testing/: count_trials.csv  match_output.csv  output_for_pdf.csv  sentence_extracted.csv
envs/olmocr/: environment.yml
envs/python/: requirements.txt
functions/: pdf_parser.py  pdf_resolver.py
modules/: paper_to_doi.py
old_codes/: filter_unmatched.py  paper_url_for_labeling.py  regex_testing.py
prompts/: system_prompts.py
research_paper_database/: csv_for_labeling.csv  paper_journal_info.csv
research_paper_database/test_papers/: test_papers.jsonl
scripts/: annonate_papers.py  doi_paper_info_pull.py  download.py  inline_paper_annotation.py  olmocr_client.py  paper_extraction.py  paper_info_pull.py  threaded_paper_extraction.py  title_paper_info_pull.py
setup_folder/: build_exl.py  compile_exl.py  setup.sh  setup_env.py
shell_scripts/: annotate.sh  annotate_papers.sh  annotate_test.sh  build_exl.sh  compile_exl.sh  download_hf.sh  flash_attn.sh  olmocr_exe.sh  setup.sh
src/LLM_Agent/: batch_inference_temp.py  inference.py  (+1 more)
testing/: test_annotate.py  test_annotation.ipynb
(+8 files in other folders)
